RecyclerView implemented at Ciclos class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="ciclos">Ciclos</string>
     <string name="minhaconta">Minha Conta</string>
     <string name="login">Login</string>
+    <string name="iconsCreator">Bernar Novalyi</string>
+
 </resources>
